--- a/css/style.css
+++ b/css/style.css
@@ -262,9 +262,6 @@ body {
     HEADER AREA
 -------------------------------------------------------------------*/
 
-#site-header {}
-
-#header {}
 
 .logo {
     float: left;
@@ -279,7 +276,6 @@ body {
     left: 0;
 }
 
-.main-menu {}
 
 .header-block-top .navbar-brand {
     margin: 0 !important;
@@ -559,7 +555,7 @@ body {
         opacity: 0;
     }
 
-    @media (min-width: 768px) {
+}@media (min-width: 768px) {
         from {
             -webkit-transform: translate(-50%, 0);
             -webkit-transform: translate3d(-50%, 0, 0);
@@ -576,7 +572,7 @@ body {
             opacity: 0;
         }
     }
-}
+
 
 @keyframes scrollWheel {
     from {
@@ -595,7 +591,7 @@ body {
         opacity: 0;
     }
 
-    @media (min-width: 768px) {
+}@media (min-width: 768px) {
         from {
             -webkit-transform: translate(-50%, 0);
             -webkit-transform: translate3d(-50%, 0, 0);
@@ -612,7 +608,7 @@ body {
             opacity: 0;
         }
     }
-}
+
 
 /*------------------------------------------------------------------
     ABOUT AREA
@@ -623,11 +619,11 @@ body {
 }
 
 .pad-top-100 {
-    padding-top: 90px;
+    padding-top: 70px;
 }
 
 .pad-bottom-100 {
-    padding-bottom: 90px;
+    padding-bottom: 40px;
 }
 
 .pad-top-70 {
@@ -688,162 +684,11 @@ body {
 }
 
 
-/*------------------------------------------------------------------
-    SPECIAL-MENU AREA
--------------------------------------------------------------------*/
-.special-menu {
-    background: url(../images/special_menu_bg.jpg) no-repeat center;
-    background-attachment: fixed;
-    background-size: cover;
-    position: relative;
-}
-
-.special-menu:before {
-    content: '';
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.67);
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.title-caption {
-    letter-spacing: 0.16px;
-    padding: 20px 120px;
-    color: #fff;
-    font-size: 18px;
-}
-
-.color-white {
-    color: #fff;
-}
-
-#owl-demo .item {
-    margin: 15px;
-    position: relative;
-}
-
-#owl-demo .item img {
-    display: block;
-    width: 100%;
-    height: auto;
-}
-
-.special-box .owl-theme .owl-controls {
-    margin: 0px;
-}
-
-.item-type-zoom {
-    border: 4px solid #fff;
-}
-
-.item-type-zoom .item-hover {
-    z-index: 5;
-    -webkit-transition: all 300ms ease-out;
-    -moz-transition: all 300ms ease-out;
-    -o-transition: all 300ms ease-out;
-    transition: all 300ms ease-out;
-    opacity: 0;
-    cursor: pointer;
-    display: block;
-    text-decoration: none;
-    text-align: center;
-}
-
-.item-type-zoom .item-info {
-    z-index: 10;
-    color: #ffffff;
-    display: table-cell;
-    vertical-align: middle;
-    position: absolute;
-    z-index: 5;
-    -webkit-transform: scale(0, 0);
-    -moz-transform: scale(0, 0);
-    -ms-transform: scale(0, 0);
-    transform: scale(0, 0);
-    -webkit-transition: all 300ms ease-out;
-    -moz-transition: all 300ms ease-out;
-    -o-transition: all 300ms ease-out;
-    transition: all 300ms ease-out;
-    bottom: 0px;
-}
-
-.item-type-zoom .item-info .headline {
-    font-size: 18px;
-    width: 75%;
-    margin: 0 auto;
-    border: 4px solid #ffffff;
-    padding: 10px;
-}
-
-.item-type-zoom .item-info .line {
-    height: 1px;
-    width: 60%;
-    margin: 15px auto 10px auto;
-    background-color: #ffffff;
-}
-
-.item-type-zoom .item-info .dit-line {
-    font-size: 14px;
-    font-style: italic;
-}
-
-.item-hover,
-.item-hover {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-}
-
-.item-type-zoom .item-hover:hover {
-    opacity: 1;
-}
-
-.item-type-zoom .item-hover:hover:before {
-    content: "";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: rgba(231, 91, 30, 0.5);
-    top: 0px;
-    left: 0px;
-}
-
-.item-type-zoom .item-hover:hover .item-info {
-    -webkit-transform: scale(1, 1);
-    -moz-transform: scale(1, 1);
-    -ms-transform: scale(1, 1);
-    transform: scale(1, 1);
-}
-
-.special-box {
-    padding-bottom: 40px;
-}
-
-.special-box .owl-theme .owl-controls .owl-page.active span {
-    /*background:#e75b1e;*/
-    height: 16px;
-    width: 16px;
-}
-
-.special-box .owl-theme .owl-controls .owl-page span {
-    border: 2px solid #fff;
-    opacity: 1;
-    background: #202020;
-    height: 16px;
-    width: 16px;
-}
 
 /*------------------------------------------------------------------
     MENU AREA
 -------------------------------------------------------------------*/
 
-
-.menu-main {}
 
 .menu-main .title-caption {
     color: #666;
@@ -872,6 +717,9 @@ body {
     background: #f5f5f5;
     padding: 2px 0px;
     box-shadow: 0 0 8px 5px rgba(0, 0, 0, 0.05);
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .offer-item {
@@ -1089,7 +937,6 @@ body {
     GALLERY AREA
 -------------------------------------------------------------------*/
 
-.gallery-main {}
 
 .gallery-main .title-caption {
     color: #666;
@@ -1487,18 +1334,26 @@ body {
     margin-top: -8px;
 }
 
-.panel-pricing:hover
+
 /*------------------------------------------------------------------
-    RESERVATIONS AREA
+    MENU DOWNLOAD AREA
 -------------------------------------------------------------------*/
 
-
+.tab-menu a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e75b1e;
+    color: #fff;
+    font-size: medium;
+    width: 200px;
+    height: 50px;
+}
 
 /*------------------------------------------------------------------
     FOOTER AREA
 -------------------------------------------------------------------*/
 
-.footer-main {}
 
 .footer-news {
     background: url(../images/newsletter-bg.jpg) no-repeat center;
